# wwp-bot-ai

./: .dockerignore  .flake8  .pre-commit-config.yaml  .tool-versions  Dockerfile  docker-compose.yml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml
app/: main.py
app/tests/: test_init.py
kubernetes/: deployment.yaml  service.yaml
