[project]
name = "wwp-bot-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88
exclude = ["migrations", "venv"]


